sec: Add allowlist for reflective class instantiation in EFormPDFServlet and FrmPDFServlet
Agent-Logs-Url: https://github.com/carlos-emr/carlos/sessions/9c7d7ba7-93d8-409e-a702-ecf9e052d232

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>