@@ -42,6 +42,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.Enumeration;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 
 import jakarta.servlet.ServletContext;
@@ -97,6 +98,14 @@ import org.openpdf.text.pdf.PdfWriter;
 public class EFormPDFServlet extends HttpServlet {
 
     Logger log = MiscUtils.getLogger();
+
+    /**
+     * Allowlist of valid post-processor short names mapped to their concrete classes.
+     * Only processors explicitly registered here may be instantiated via the {@code postProcessor}
+     * request parameter. This prevents reflective instantiation of arbitrary classes.
+     * To add a new processor, implement {@link FrmPDFPostValueProcessor} and add an entry here.
+     */
+    private static final Map<String, Class<? extends FrmPDFPostValueProcessor>> ALLOWED_PROCESSORS = Map.of();
 
     /**
      * Default constructor.
@@ -494,12 +503,17 @@ public class EFormPDFServlet extends HttpServlet {
         }
 
         if (req.getParameter("postProcessor" + suffix) != null) {
-            String className = "io.github.carlos_emr.carlos.form.pdfservlet." + req.getParameter("postProcessor" + suffix);
-            try {
-                FrmPDFPostValueProcessor pp = (FrmPDFPostValueProcessor) Class.forName(className).newInstance();
-                props = pp.process(props);
-            } catch (Exception e) {
-                log.warn("Post-processor {} could not be loaded or failed during execution - form rendered without post-processing", className, e);
+            String processorName = req.getParameter("postProcessor" + suffix);
+            Class<? extends FrmPDFPostValueProcessor> clazz = ALLOWED_PROCESSORS.get(processorName);
+            if (clazz != null) {
+                try {
+                    FrmPDFPostValueProcessor pp = clazz.getConstructor().newInstance();
+                    props = pp.process(props);
+                } catch (Exception e) {
+                    log.warn("Post-processor '{}' failed during execution - form rendered without post-processing", processorName, e);
+                }
+            } else {
+                log.warn("Post-processor '{}' is not in the allowlist and will not be executed", processorName);
             }
         }
 
